--- a/src/app/components/rutinas-details/rutinas-details.component.html
+++ b/src/app/components/rutinas-details/rutinas-details.component.html
@@ -5,4 +5,8 @@
     <p>{{rutina.descripcion}}</p>
     <p>{{rutina.precio}} USD</p>
     <button (click)="createPaymentPreference()">Comprar</button>
+    @if(verificador){
+      <button (click)="deleteRutina()">Eliminar</button>
+      <button (click)="editRutina()">Editar</button>
+    }
 </div>
