--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -104,3 +104,22 @@ body {
 .add-btn:hover {
     transform: scale(1.05);
 }
+.nav-links li a {
+    position: relative;
+    padding-bottom: 2px;
+}
+
+.nav-links li a::before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 0;
+    height: 1px;
+    background-color: #000000;
+    transition: width 0.3s ease;
+}
+
+.nav-links li a:hover::before {
+    width: 100%;
+}
