--- a/src/app/components/productos-details/productos-details.component.css
+++ b/src/app/components/productos-details/productos-details.component.css
@@ -1,3 +1,13 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: auto;
+  margin-top: 30px;
+}
+
 .product-container {
   max-width: 800px;
   margin: 80px auto;
@@ -47,49 +57,24 @@
   box-shadow: 0 6px 20px rgba(76, 175, 80, 0.4);
   background: linear-gradient(135deg, #45a049, #4CAF50);
 }
-
-
-
-
-
-
-
-button[routerLink="/productos"]:hover {
-  background: #ff8787;
-  transform: scale(1.1);
+ 
+.btn-container{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
 }
-
-button[routerLink="/productos"] {
-  position: fixed;
-  top: 80px;
-  left: 20px;
-  padding: 0.8rem 1.5rem;
-  background: #ff6b6b;
-  color: white;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-}
-
 
 .btn-volver {
-  position: fixed;
-  top: 20px;
-  left: 20px;
-  padding: 1rem 2rem;
-  background: linear-gradient(135deg, #ff6b6b, #ff8787);
+  width: 100px;
+  height: 40px;
+  background: black;
   color: white;
   border: none;
   border-radius: 50px;
   font-size: 1.1rem;
+  margin-left: 20px;
   cursor: pointer;
   transition: all 0.3s ease;
   box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3);
-}
-
-.btn-volver:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 6px 20px rgba(255, 107, 107, 0.4);
-  background: linear-gradient(135deg, #ff8787, #ff6b6b);
 }
