--- a/src/app/components/productos-details/productos-details.component.html
+++ b/src/app/components/productos-details/productos-details.component.html
@@ -1,12 +1,16 @@
-<button routerLink="/productos" class="btn-volver">Volver</button>
-<div class="product-container">
-  <h1>{{producto.nombre}}</h1>
-    <img [src]="producto.imagen" alt="imagen">
-    <p>{{producto.descripcion}}</p>
-    <p>{{producto.precio}} USD</p>
-    <button (click)="createPaymentPreference()">Comprar</button>
-    @if(verificador){
-      <button (click)="deleteProducto()">Eliminar</button>
-      <button (click)="editProduct()">Editar</button>
-    }
+<div class="container">
+  <div class="btn-container">
+    <button routerLink="/productos" class="btn-volver">Volver</button>
+  </div>
+  <div class="product-container">
+    <h1>{{producto.nombre}}</h1>
+      <img [src]="producto.imagen" alt="imagen">
+      <p>{{producto.descripcion}}</p>
+      <p>{{producto.precio}} USD</p>
+      <button (click)="createPaymentPreference()">Comprar</button>
+      @if(verificador){
+        <button (click)="deleteProducto()">Eliminar</button>
+        <button (click)="editProduct()">Editar</button>
+      }
+  </div>
 </div>
