--- a/src/app/pages/page-productos/page-productos/page-productos.component.css
+++ b/src/app/pages/page-productos/page-productos/page-productos.component.css
@@ -1,6 +1,7 @@
 .product-general {
   text-align: center;
   font-family: Arial, sans-serif;
+  min-height: 90vh;
 }
 
 .grid-product {
@@ -14,6 +15,12 @@
   border: 1px solid #ddd;
   border-radius: 8px;
   padding: 16px;
+  width: 300px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
@@ -92,4 +99,10 @@
 .product-general h1 {
   text-align: center;
   margin: 2rem 0;
+}
+
+.imagen-producto{ 
+  width: 75%;
+  height: 60%;
+  object-fit:center;
 }
