Some edits of css and a new pop up for admins

--- a/src/app/components/about-us/about-us.component.css
+++ b/src/app/components/about-us/about-us.component.css
@@ -1,8 +1,7 @@
 .container{
-  margin-top: 50px;
-  margin-bottom: 50px;
   width: 100vw;
   display: flex;
+  height: 90vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
