--- a/src/app/components/navbar-home/navbar-home.component.html
+++ b/src/app/components/navbar-home/navbar-home.component.html
@@ -1,9 +1,14 @@
 <div>
     <nav class="navbar-home">
-        <div>
-            <div><a routerLink="/productos">Products</a></div>
-            <div><a routerLink="/login">Sign in</a></div>
+        <div><a routerLink="/productos">Products</a></div>
+        <div class="social-icons">
+                <a href="https://facebook.com" class="social-icon-link">
+                    <img src="https://cdn3.iconfinder.com/data/icons/transparent-on-dark-grey/500/icon-02-512.png" alt="Facebook" class="social-icon" />
+                </a>
+                <a href="https://instagram.com" class="social-icon-link">
+                    <img src="https://www.iconpacks.net/icons/2/free-instagram-logo-icon-3497-thumb.png" alt="Instagram" class="social-icon" />
+                </a>
+            </div>
             <div><a routerLink="/rutinas">Routines</a></div>
-        </div>
     </nav>
 </div>
