--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -57,12 +57,13 @@ body {
 .dropdown {
     position: relative;
     display: inline-block;
+    padding-right: 10px;
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    left: -125px;
+    left: -135px;
     background-color: #f9f9f9;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -122,4 +123,9 @@ body {
 
 .nav-links li a:hover::before {
     width: 100%;
+}
+
+.login-btn{
+    text-decoration: none;
+    color: #000;
 }
