--- a/src/app/components/hero-home/hero-home.component.css
+++ b/src/app/components/hero-home/hero-home.component.css
@@ -8,7 +8,6 @@
     display: flex;
     justify-content: start;
     padding-top: 2%;
-    gap: 5%;
     align-items: start;
     flex-direction: column;
 }
@@ -49,7 +48,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    gap: 10px;
     width: 100%;
 }
 .hero-home-whatsapp{
@@ -100,4 +98,12 @@
     border-radius: 10px;
     border: none;
     color: white;
+}
+.hero-home-header{
+    margin-top: 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-right: 10%;
+    width: 100%;
 }
