Se añado funcionalidad a que se puedan filtrar los productos y rutinas, que se vea un historial de productos y rutinas, y que el input del hero filtre tanto de productos como de rutinas, el nombre que este dentro de ese input

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -27,8 +27,8 @@
                 @else{
                     <a routerLink="/login" class="login-btn"> <i class="fas fa-sign-in-alt"></i> Iniciar sesión</a>
                 }
-                <a routerLink="/productos" (click)="togglePopup()">Mis productos</a>
-                <a routerLink="/rutinas" (click)="togglePopup()">Mis rutinas</a>
+                <a routerLink="/misProductos" (click)="togglePopup()">Mis productos</a>
+                <a routerLink="/misRutinas" (click)="togglePopup()">Mis rutinas</a>
             </div>
         </div>
     </div>
