--- a/src/app/components/rutinas-details/rutinas-details.component.html
+++ b/src/app/components/rutinas-details/rutinas-details.component.html
@@ -4,7 +4,10 @@
     <img [src]="rutina.imagen" alt="imagen">
     <p>{{rutina.descripcion}}</p>
     <p>{{rutina.precio}} USD</p>
-    <button (click)="createPaymentPreference()">Comprar</button>
+    @if(!comprado){
+      <button (click)="createPaymentPreference()">Comprar</button>
+    }
+    
     @if(verificador){
       <button (click)="type='eliminar'; togglePopUp()">Eliminar</button>
       <button (click)="type='editar'; togglePopUp()">Editar</button>
