--- a/src/app/pages/page-productos/page-productos/page-productos.component.css
+++ b/src/app/pages/page-productos/page-productos/page-productos.component.css
@@ -106,3 +106,68 @@
   height: 60%;
   object-fit:center;
 }
+.filtros-container {
+  width: 100%;
+  max-width: 800px;
+  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.filtros {
+  display: flex;
+  gap: 15px;
+  align-items: center;
+  padding: 15px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+select, input[type="number"] {
+  padding: 8px 15px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  font-size: 0.9rem;
+  color: #333;
+  background-color: white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+select:hover, input[type="number"]:hover {
+  border-color: #000;
+}
+
+select:focus, input[type="number"]:focus {
+  outline: none;
+  border-color: #000;
+  box-shadow: 0 0 5px rgba(0,0,0,0.2);
+}
+
+input[type="number"] {
+  width: 150px;
+}
+
+input[type="number"]::placeholder {
+  color: #666;
+}
+
+
+button {
+  background-color: #000;
+  color: #fff;
+  padding: 8px 15px;
+  border-radius: 5px;
+  border: none;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+button:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  background: linear-gradient(45deg, #000, #333);
+}
