--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,7 @@
 <div class="home">
-    <app-hero-home></app-hero-home>
-    <app-navbar-home></app-navbar-home>
+    <div>
+        <app-hero-home></app-hero-home>
+        <app-navbar-home></app-navbar-home>
+    </div>
     <app-list-productos></app-list-productos>
 </div>
