--- a/src/app/components/add-rutinas/add-rutinas.component.css
+++ b/src/app/components/add-rutinas/add-rutinas.component.css
@@ -87,3 +87,15 @@
 .add-btn:hover {
     background-color: #333;
 }
+.preview-container{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
+.preview-container img{
+  width: 80%;
+  height: 80%;
+  object-fit: cover;
+  margin-bottom: 20px;
+}
