--- a/src/app/components/find-products/find-products.component.css
+++ b/src/app/components/find-products/find-products.component.css
@@ -3,20 +3,28 @@
     flex-direction: column;
     align-items: center;
     min-height: 90vh;
+    gap: 2rem;
     padding: 2rem;
   }
-  
+  .filtros-container-titulo{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  }
   .filtros-container {
     width: 100%;
     max-width: 800px;
     margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
   }
   
   .filtros {
     display: flex;
+    justify-content: space-between;
+    width: 70%;
     gap: 15px;
     align-items: center;
     padding: 15px;
@@ -85,7 +93,6 @@
     border-radius: 8px;
     padding: 16px;
     width: 300px;
-    height: 450px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -102,7 +109,6 @@
     font-size: 1.3rem;
     font-weight: bold;
     color: #333;
-    height: 40px;
   }
   
   .imagen-producto {
@@ -110,16 +116,12 @@
     height: 180px;
     object-fit: cover;
     border-radius: 8px;
-    margin: 5px 0;
   }
   
   p {
     font-family: Arial, sans-serif;
-    margin: 5px 0;
     color: #666;
     font-size: 0.9rem;
-    line-height: 1.4;
-    padding: 0 10px;
   }
   
   .producto button {
@@ -131,13 +133,7 @@
     border: none;
     transition: all 0.3s ease;
     font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    position: relative;
-    overflow: hidden;
     text-decoration: none;
-    margin-top: auto;
-    margin-bottom: 10px;
   }
   
   .producto button:hover {
