--- a/src/app/components/historial/historial.component.css
+++ b/src/app/components/historial/historial.component.css
@@ -1,13 +1,15 @@
 .historial-container {
-    max-width: 800px;
     margin: 40px auto;
     padding: 30px;
     background: rgba(255, 255, 255, 0.1);
-    border-radius: 20px;
-    backdrop-filter: blur(10px);
-    box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    height: 85vh;
     color: #000000;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
   }
   
   .historial-container h1 {
@@ -26,23 +28,14 @@
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
     object-fit: cover;
   }
-  
-  .historial-imagen:hover {
-    transform: scale(1.05);
-    transition: transform 0.3s ease;
-  }
   .historial-item {
+    width: 50%;
     background: rgba(255, 255, 255, 0.2);
     border-radius: 15px;
     padding: 20px;
     margin-bottom: 20px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
     transition: all 0.3s ease;
-  }
-  
-  .historial-item:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
   }
   
   .historial-item p {
@@ -129,4 +122,10 @@
     transform: translateY(-2px);
     box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     background: linear-gradient(45deg, #000, #333);
+  }
+  .historial-item-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
   }
