--- a/src/app/components/rutinas/rutinas.component.css
+++ b/src/app/components/rutinas/rutinas.component.css
@@ -4,15 +4,16 @@
   align-items: center;
   min-height: 90vh;
   padding: 2rem;
+  gap: 2rem;
 }
 
 .filtros-container {
   width: 100%;
-  max-width: 800px;
-  margin-bottom: 2rem;
   display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  flex-direction: row;
+  padding-left: 50px;
+  padding-right: 50px;
+  justify-content: space-between;
 }
 
 .filtros {
@@ -86,7 +87,6 @@ button:hover {
   border-radius: 8px;
   padding: 16px;
   width: 300px;
-  height: 450px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -116,16 +116,9 @@ button:hover {
 
 .descripcion-rutina {
   font-family: Arial, sans-serif;
-  margin: 5px 0;
   color: #666;
   font-size: 0.9rem;
-  line-height: 1.4;
-  padding: 0 10px;
-  height: 60px;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+  height: 20px;
 }
 
 .precio-rutina {
@@ -138,12 +131,8 @@ button:hover {
   transition: all 0.3s ease;
   font-weight: bold;
   text-transform: uppercase;
-  letter-spacing: 1px;
-  position: relative;
   overflow: hidden;
   text-decoration: none;
-  margin-top: auto;
-  margin-bottom: 10px;
 }
 
 .precio-rutina:hover {
