--- a/src/app/historial-rutinas/historial-rutinas.component.html
+++ b/src/app/historial-rutinas/historial-rutinas.component.html
@@ -9,8 +9,10 @@
         <p class="nombre">Nombre: {{item.nombre}}</p>
         <p class="precio">Precio: ${{item.precio}}</p>
         <p class="descripcion">Descripción: {{item.descripcion}}</p>
-        <img [src]="item.imagen" alt="{{item.nombre}}" class="historial-imagen">
+        <div class="historial-item-container">
+          <img [src]="item.imagen" alt="{{item.nombre}}" class="historial-imagen">
         <button (click)="seeDetails(item.id)">Ver detalles</button>
+        </div>
       </div>
     }
   } @else {
