--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -1,6 +1,8 @@
 .home{
     width: 100vw;
+    min-height: 90vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
+    justify-content: space-around;
+    flex-direction: column;
 }
