Add links to instagran and whatsapp

--- a/src/app/components/navbar-home/navbar-home.component.html
+++ b/src/app/components/navbar-home/navbar-home.component.html
@@ -5,7 +5,7 @@
                 <a href="https://facebook.com" class="social-icon-link">
                     <img src="https://cdn3.iconfinder.com/data/icons/transparent-on-dark-grey/500/icon-02-512.png" alt="Facebook" class="social-icon" />
                 </a>
-                <a href="https://instagram.com" class="social-icon-link">
+                <a href="https://www.instagram.com/rominamarangonifit/profilecard/?igsh=MTNqM21ieDZxZHcxMQ==" class="social-icon-link">
                     <img src="https://www.iconpacks.net/icons/2/free-instagram-logo-icon-3497-thumb.png" alt="Instagram" class="social-icon" />
                 </a>
             </div>
