--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <div class="footer-section">
-        <h3><a href="#">Contactanos</a></h3>
+        <h3><a href="https://wa.link/zbucuz">Contactanos</a></h3>
         <p>Envíanos un mensaje</p>
     </div>
     <div class="footer-section">
