--- a/src/app/components/historial/historial.component.css
+++ b/src/app/components/historial/historial.component.css
@@ -3,7 +3,7 @@
     padding: 30px;
     background: rgba(255, 255, 255, 0.1);
     width: 100%;
-    height: 85vh;
+    min-height: 85vh;
     color: #000000;
     text-align: center;
     display: flex;
