--- a/src/app/components/list-productos/list-productos.component.css
+++ b/src/app/components/list-productos/list-productos.component.css
@@ -4,7 +4,7 @@
     gap: 20px;
     padding: 20px;
     max-width: 1200px;
-    margin: 0 auto;
+    margin-bottom: 50px;
   }
   
   .producto {
@@ -16,13 +16,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    gap: 10px;
+    gap: 20px;
   }
   
   .imagen-producto {
-    width: 75%;
-    height: 60%;
-  object-fit:cover;
+    width: 70%;
+    height: 125px;
+    object-fit:cover;
   }
 
   .btn-ver-detalles{
