--- a/src/app/historial-rutinas/historial-rutinas.component.css
+++ b/src/app/historial-rutinas/historial-rutinas.component.css
@@ -1,6 +1,6 @@
 .historial-container {
     width: 100%;
-    height: 85vh;
+    min-height: 85vh;
     margin: 40px auto;
     padding: 30px;
     background: rgba(255, 255, 255, 0.1);
@@ -21,7 +21,8 @@
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   }
   .historial-imagen {
-    height: auto;
+    height: 90%;
+    width: 90%;
     border-radius: 10px;
     margin-bottom: 1rem;
     box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
